Try again to get Facebook like button to align correctly

--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -90,7 +90,7 @@ nav.share iframe {
 
 .fb-like {
   display: inline-block;
-  padding-bottom: 5px;
+  vertical-align: top;
 }
 
 * html .fb-like{
